--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 A <span> digital anthropologist</span> who enjoys engaging in research of human behaviour and
                 passionate about delivering <span>intuitive experiences</span> based on need. 
 
-                Let's solve the Rubik's cube of your design problem and have fun rotation to the <span>optimal 
-                solutions for your user and your company</span> over a cup of coffee...or two.</p>
+                Let's solve the Rubik's cube of your design problem and have fun getting to the <span>optimal 
+                solution for your user and company</span> over a cup of coffee...or two.</p>
         <button type="button">Download Resume</button>
 
             </div>
@@ -150,6 +150,7 @@
    <!--Start Footer-->
    <div class="footer">
     <p>© 2022 Ariel Berkeley - All Rights Reserved.</p>
+   
 
    </div>
 
