--- a/index.html
+++ b/index.html
@@ -125,76 +125,29 @@
     </div>
    </section>
 
-   <!--Contact Section Start-->
-   <section class="contact-section" id="contact">
-    <div class="container">
-        <div class="row">
-            <div class="contact-img">
-                <div class="img-box">
-                    <div class="section-title">
-                        <h1>Contact Me</h1>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="contact-form">
-                    <form class="form">
-                        <div class="row">
-                            <div class="left input-group">
-                                <label>Name</label>
-                                <input type="text" placeholder="Your Name Here" class="input-control">
-                            </div>
-                            <div class="left input-group">
-                                <label>Email or Phone</label>
-                                <input type="text" placeholder="Your Email or Phone Here" class="input-control">
-                            </div>
-                            <div class="row">
-                                <div class="input-group">
-                                    <label>Message</label>
-                                    <textarea class="input-control" placeholder="Your Message Here"></textarea>
-                                </div>
-                        <div class="form-btn">
-                            <button type="button">Send Message</button>
-                        </div>
-                    </form>
-                </div>
-                <div class="row">
-                    <div class="contact-info">
-                        <div class="row">
-                            <!--Info Starts-->
-                            <div class="info-item">
-                                <h5>Address</h5>
-                                <p>Toronto, Ontario</p>
-                            </div>
-                            <!--Info item ends-->
-                            <!--Info Item starts-->
-                            <div class="info-item">
-                                <h5>Phone</h5>
-                                <p>555-895-9034</p>
-                            </div>
-                            <!--Info item ends-->
-                            <!--Info Item Starts-->
-                            <div class="info-item">
-                                <h5>Email</h5>
-                                <p>arielberkeley@info.ca</p>
-                            </div>
-                            <!--Info Item Ends-->
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="social-links">
-                        <a href="#"><i class="fa-brands fa-dribbble"></i></a>
-                        <a href="#"><i class="fa-brands fa-behance"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
+   <!--Start Let's Conect-->
+   <section class="contact" id="contact">
+    <div class="contact-form">
+        <h2>Get In Touch</h2>
+        <p>I am available for freelance work. Connect with me on my socials or via email: ab@admin.ca</p>
+        <form action="">
+            <input type="" placeholder="Your Name" required>
+            <input type="email" name="" id="" placeholder="Your Email" required>
+            <input type=""  placeholder="Write a subject" required>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required>
+            </textarea>       
+            <input type="submit" name="" value="submit" class="send">        
+        </form>
+    </div>
+
+    <div class="contact-img">
+        <img src="./images/Contactme.jpg" alt="Contact" style="width:720px;height:924px;">
+      
+    </div>
    </section>
-   <!--Contact Section End-->
+   <!--End Let's Connect-->
+
+  
 
    <!--Start Footer-->
    <div class="footer">
